# data-engineering-zoomcamp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  some_kestra_workflow.yaml
module1-data-ingestion/data-load-tool/: README.md  datasets.yaml  datatalksclub.py  github.py  pyproject.toml  run.py
module1-data-ingestion/data-load-tool/notebooks/: dlt-bigquery-101.ipynb  dlt-duckdb-101.ipynb  dlt-homework.ipynb
module1-data-ingestion/python-ingest/: Dockerfile  Makefile  README.md  app.yml  compose.yaml  datasets.yaml  docker-compose.yml  pyproject.toml  run.py  schemas.pandas.yml
module1-data-ingestion/python-ingest/app/: command.py  df_fetcher.py  df_repository.py  processor.py  schemas.py
module1-data-ingestion/python-ingest/schemas/: polars.py  pyarrow.py  renaming_strategy.py
module1-data-ingestion/python-ingest/src/: dataframe_fetcher.py  dataframe_repository.py  df_fetcher.py  df_repository.py  processor.py  schemas.py
module2-workflow-orchestration/airflow/: Dockerfile  Dockerfile.CeleryExecutor  Dockerfile.LocalExecutor  README.md  compose.celery.yaml  compose.local.yaml  compose.yaml  docker-compose.celery.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt
module2-workflow-orchestration/airflow-legacy/: README.md  docker-compose.yml  pyproject.toml
module2-workflow-orchestration/mage/: README.md  compose.yaml  docker-compose.yml  metadata.yaml  pyproject.toml
module2-workflow-orchestration/mage/magic/: io_config.yaml  metadata.yaml  requirements.txt
module2-workflow-orchestration/prefect/: README.md  app.yaml  app.yml  compose.yaml  datasets.yaml  docker-compose.yml  prefect.yaml  pyproject.toml  schemas.yaml  schemas.yml
module2-workflow-orchestration/prefect/flows/: sqlalchemy_ingest.py  web_csv_to_gcs.py
module4-analytics-engineering/bigquery/: Dockerfile  README.md  packages.yml  profiles.tmpl.yml  pyproject.toml
module4-analytics-engineering/bigquery/macros/: resolve_destination_schema.sql
module4-analytics-engineering/bigquery/seeds/: properties.yml
module4-analytics-engineering/clickhouse/: Dockerfile  README.md  compose.yaml  dbt_project.yml  docker-compose.yml  profiles.tmpl.yml  pyproject.toml
module4-analytics-engineering/clickhouse/migrations/: mysql_engine.sql  postgres_engine.sql
module4-analytics-engineering/clickhouse/seeds/: properties.yml
module4-analytics-engineering/duckdb/: Dockerfile  README.md  dbt_project.yml  profiles.tmpl.yml  pyproject.toml
module4-analytics-engineering/duckdb/macros/: resolve_destination_schema.sql
module4-analytics-engineering/duckdb/seeds/: properties.yml
module4-analytics-engineering/postgres/: Dockerfile  README.md  compose.yaml  dbt_project.yml  docker-compose.yml  profiles.tmpl.yml  pyproject.toml
module4-analytics-engineering/redshift/: Dockerfile  README.md  dbt_project.yml  profiles.tmpl.yml  pyproject.toml
module4-analytics-engineering/redshift/seeds/: properties.yml
module5-batch-processing/pyspark/: README.md  pyproject.toml
module6-stream-processing/risingwave/: INSTRUCTIONS.md  README.md  commands.sh  compose.clickhouse.yaml  compose.kafka.yaml  compose.yaml  docker-compose.clickhouse.yml  docker-compose.kafka.yml  docker-compose.yml  homework.md  index.html  pyproject.toml  requirements.txt  seed.py  seed_kafka.py  server.py  workshop.md
week1/postgres_ingest/: Dockerfile  HOMEWORK.md  README.md  app.yml  dataset_downloader.py  df_persistence.py  docker-compose.yml  main.py  pg_ingest.py  pyproject.toml  requirements.txt
week2/prefect/: README.md  app.yml  flow_pg_ingest.py  ingest-deployment.yaml  pyproject.toml  requirements-dev.txt
week5/pyspark/: README.md  app.py  pyproject.toml  pyspark_homework.ipynb  pyspark_playground.ipynb  spark_gcs.py
week_1_basics_n_setup/pandas_sqlalchemy/: Dockerfile  README.md  app.yml  docker-compose.yml  pg_ingest.py  pyproject.toml  run.py  sqlalchemy_ingest.py
week_2_workflow_orchestration/airflow/: README.md  docker-compose.celery.yml  docker-compose.local.yml  docker-compose.yaml  pyproject.toml
week_2_workflow_orchestration/airflow-legacy/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
week_2_workflow_orchestration/prefect/: README.md  app.yml  docker-compose.yml  pyproject.toml  schemas.yml
week_3_data_warehouse/prefect/: README.md  app.yml  pyproject.toml  schemas.yml
week_4_analytics_engineering/: README.md  pyproject.toml
week_4_analytics_engineering/bigquery/: Dockerfile  README.md  dbt_project.yml  profiles.tmpl.yml  pyproject.toml
week_4_analytics_engineering/clickhouse/: Dockerfile  README.md  dbt_project.yml  docker-compose.yml  profiles.tmpl.yml  pyproject.toml
week_4_analytics_engineering/datavis/: README.md  docker-compose.metabase.yaml  docker-compose.metabase.yml  docker-compose.yml
week_4_analytics_engineering/dbt-bigquery/: README.md  dbt_project.yml  pyproject.toml
week_4_analytics_engineering/dbt-duckdb/: README.md  dbt_project.yml  pyproject.toml
week_4_analytics_engineering/duckdb/: README.md  dbt_project.yml  pyproject.toml
week_4_analytics_engineering/ny_taxi_bigquery/: README.md  dbt_project.yml  profiles.tmpl.yml  profiles.yml  pyproject.toml
week_4_analytics_engineering/piperider_duckdb/: README.md  dbt_project.yml  packages.yml  profiles.tmpl.yml  pyproject.toml
week_4_analytics_engineering/postgres/: Dockerfile  README.md  dbt_project.yml  docker-compose.yml  profiles.tmpl.yml  pyproject.toml
week_4_analytics_engineering/redshift/: Dockerfile  README.md  dbt_project.yml  profiles.tmpl.yml  pyproject.toml
week_4_analytics_engineering/workshop-piperider/: README.md
week_5_batch_processing/pyflink/: README.md  pyflink_playground.ipynb  pyproject.toml
week_5_batch_processing/pyspark/: README.md  fhv_zones_gcs.py  pyproject.toml  pyspark_homework.ipynb  pyspark_playground.ipynb  spark_app.py  spark_gcs.py  spark_gcs_fhv_zones_tripdata.py
week_6_stream_processing/python/: README.md  app.yml  main.py  pyproject.toml  pyspark_schema.py
week_6_stream_processing/python-faust/: README.md  pyproject.toml
(+416 files in other folders)
