[tool.poetry]
name = "analytics-engineering"
version = "0.1.0"
description = "Analytics Engineering with dbt"
authors = ["iobruno <bruno.ariev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "analytics_engineering"}]

[tool.poetry.dependencies]
python = "^3.9"
dbt-bigquery = "^1.4.1"
dbt-duckdb = "^1.4.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
