[project]
name = "dlt-playground"
version = "1.0"
description = "data-load-tool (dlt) Playground"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "dlt[bigquery]>=1.4.1",
    "duckdb>=1.1.3,<2.0",
    "polars>=1.17.1,<2.0",
    "google-cloud-bigquery-storage>=2.27.0,<3.0",
    "httpx>=0.28.1,<1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
    "jupyterlab>=4.3.3",
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]