[project]
name = "dlt-playground"
version = "2.0"
description = "data load tool workshop"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.12,<3.13"

dependencies = [
    "dlt[duckdb]>=1.5.0,<2.0",
    "duckdb>=1.1.3,<2.0",
    "polars>=1.21.0,<2.0",
    "pandas>=2.2.3,<3.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.9.4",
    "jupyterlab>=4.3.5",
]

[tool.ruff]
line-length = 100
