[project]
name = ""
version = "1.0"
description = "CLI for retrieving NYC Taxi record dataTripdata and persisting it with SQLAlchemy and Pandas"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.10,<3.13"

dependencies = [
    "typer[all]>=0.12.3,<1.0",
    "pandas>=2.2.2,<3.0",
    "pyarrow>=16.1.0,<17",
    "polars>=1.1.0,<2.0",
    "adbc-driver-manager>=1.1.0,<2.0",
    "adbc-driver-postgresql>=1.1.0,<2.0",
    "sqlalchemy>=2.0.31,<3.0",
    "psycopg[binary]>=3.2.1,<4.0",
    "hydra-core>=1.3.2,<2.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "jupyterlab>=4.2.3",
    "ruff>=0.5.1",
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
