[project]
name = "mage-playground"
version = "1.0"
description = "Workflow orchestration with Mage.ai"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "mage-ai>=0.9.75,<1.0",
    "pandas>=2.2.3,<3.0",
    "psycopg2-binary>=2.9.10,<3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
