[project]
name = ""
version = "1.0"
description = "Workflow orchestration with Prefect"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.12,<3.13"

dependencies = [
    "pandas>=2.2.3,<3.0",
    "pyarrow>=18.0.0,<19",
    "sqlalchemy>=2.0.36,<3.0",
    "psycopg[binary]>=3.2.3,<4.0",
    "prefect>=3.1.1,<4.0",
    "prefect-gcp>=0.6.1,<1.0",
    "prefect-sqlalchemy>=0.5.1,<1.0",
    "hydra-core>=1.3.2,<2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3"
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
