[project]
name = "dbt-bigquery-analytics"
version = "1.0"
description = "Analytics Engineering with dbt and BigQuery"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.10,<3.13"

dependencies = [
    "dbt-bigquery>=1.8.2,<2.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]