[project]
name = "dbt-duckdb-analytics"
version = "1.0"
description = "Analytics Engineering with dbt, duckdb and piperider"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.10,<3.13"

dependencies = [
    "dbt-duckdb>=1.8.4,<2.0",
    "duckdb>=1.1.1,<2.0",
    "s3fs==2024.9.0",
    "gcsfs==2024.9.0.post1",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]