[project]
name = "dbt-duckdb-analytics"
version = "2.0"
description = "Analytics engineering with dbt and duckdb"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "dbt-duckdb>=1.9.1,<2.0",
    "duckdb>=1.1.3,<2.0",
    "s3fs==2024.10.0",
    "gcsfs==2024.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
