[project]
name = "dbt-duckdb-analytics"
version = "2.0"
description = "Analytics engineering with dbt and duckdb"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "dbt-core>=1.9.2,<2.0",
    "dbt-duckdb>=1.9.1,<2.0",
    "duckdb>=1.1.3,<2.0",
    "s3fs==2025.2.0",
    "gcsfs==2025.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
