[project]
name = ""
version = "1.0"
description = "Analytics Engineering with dbt and PostgreSQL"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.10,<3.12"

dependencies = [
    "dbt-postgres>=1.7.8,<2.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.2.2",
]

[tool.ruff]
line-length = 100