[project]
name = "dbt-redshift-analytics"
version = "2.0"
description = "Analytics engineering with dbt and Redshift"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "dbt-redshift>=1.9.0,<2.0",
    "awscli>=1.36.19,<2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
