[project]
name = "dbt-redshift-analytics"
version = "2.0"
description = "Analytics engineering with dbt and Redshift"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "dbt-core>=1.9.2,<2.0",
    "dbt-redshift>=1.9.0,<2.0",
    "awscli>=1.37.11,<2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
