[project]
name = "pyspark-playground"
version = "1.0"
description = "Batch Processing with PySpark"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.10,<3.12"

dependencies = [
    "pyspark>=3.5.3,<4.0",
    "pyarrow>=18.0.0,<19.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.0", 
    "ruff>=0.7.3"
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
