[project]
name = "pyspark-playground"
version = "1.0"
description = "Batch processing with PySpark"
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "pyspark>=3.5.3,<4.0",
    "pyarrow>=18.1.0,<19.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
    "jupyterlab>=4.3.2", 
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
