[project]
name = "pyspark-playground"
version = "1.0"
description = "Batch processing with PySpark"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "pyspark>=3.5.3,<4.0",
    "pyarrow>=19.0.0,<20.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
    "jupyterlab>=4.3.5", 
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
