[project]
name = ""
version = "1.0"
description = "Rising Wave Workshop"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.10,<3.12"

dependencies = [
    "typer[all]>=0.9.0,<1.0",
    "polars>=0.20.15,<1.0",
    "pandas>=2.2.1,<3.0",
    "pyarrow>=15.0.1,<16.0",
    "sqlalchemy>=2.0.28,<3.0",
    "psycopg2-binary==2.9.9",
    "pendulum>=3.0.0,<4.0",
    "confluent-kafka>=2.3.0,<3.0",
    "fastapi>=0.110.0,<1.0",
    "uvicorn>=0.28.0,<1.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.3.3",
    "jupyterlab>=4.1.5",
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
