[tool.poetry]
name = "postgres-ingest"
version = "1.0"
description = "CLI App to fetch NY Taxi Tripdata and Ingest to Postgres"
authors = ["iobruno <bruno.ariev@gmail.com>"]
license = "CC-BY-SA 4.0"
readme = "README.md"
packages = [{include = "postgres_ingest"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
omegaconf = "^2.3.0"
pandas = "^2.0.0"
pyarrow = "^11.0.0"
rich = "^13.3.0"
sqlalchemy = "^2.0.9"
psycopg = "^3.1.8"
psycopg-binary = { version = "^3.1.8", markers = "platform_system == 'Darwin'" }

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.3"
yapf = "^0.32.0"
toml = "^0.10.2"

[tool.yapf]
based_on_style = "facebook"
allow_multiline_lambdas = true
blank_line_before_nested_class_or_def = true
coalesce_brackets = true
column_limit = 100
split_before_bitwise_operator = true
split_before_named_assigns = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"