[project]
name = ""
version = "1.0"
description = "Command-line interface (CLI) application for retrieving New York Taxi Tripdata and seamlessly integrating it into a Postgres database using the Pandas API"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.10,<3.12"

dependencies = [
    "click>=8.1.7,<9.0",
    "rich>=13.7.0,<14.0",
    "omegaconf>=2.3.0",
    "pandas>=2.1.3,<3.0",
    "pyarrow>=14.0.1,<15",
    "sqlalchemy>=2.0.23,<3.0",
    "psycopg>=3.1.13,<4.0",
    "psycopg-binary>=3.1.13,<4.0",
    "mysql-connector-python>=8.2.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "jupyterlab>=4.0.9",
    "ruff>=0.1.6",
]

[tool.ruff]
line-length = 100