[project]
name = ""
version = "0.1"
description = "Legacy Airflow DAGs for workflow orchestration"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.8,<3.10"

dependencies = [
    "apache-airflow==1.10.15",
    "markupsafe==2.0.1",
    "wtforms==2.3.3",
    "SQLAlchemy==1.3.24",
    "psycopg2-binary==2.9.9",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.6",
]

[tool.ruff]
line-length = 100