[tool.poetry]
name = "poetry-workflow"
version = "1.0.0"
description = "Airflow Orchestration | Modern Data Stack | DEZoomcamp"
authors = ["iobruno <bruno.ariev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
omegaconf = "^2.3.0"
apache-airflow = "^2.5.1"
pandas = "^1.5.3"
pyarrow = "^11.0.0"
sqlalchemy = "1.4.46"
psycopg2 = { version = "2.9.5", markers = "platform_system == 'Linux'" }
psycopg2-binary = { version = "^2.9.5", markers = "platform_system == 'Darwin'" }

[tool.poetry.group.dev.dependencies]
jupyterlab = "3.5.3"
yapf = "^0.32.0"

[tool.yapf]
based_on_style = "google"
allow_multiline_lambdas = true
blank_line_before_nested_class_or_def = true
coalesce_brackets = true
column_limit = 100
split_before_bitwise_operator = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
