[project]
name = ""
version = "0.1"
description = "Airflow DAGs for workflow orchestration"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.10,<3.12"

dependencies = [

]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.6",
]

[tool.ruff]
line-length = 100