[tool.poetry]
name = "prefect-workflow"
version = "1.0"
description = "Prefect Workflow Orchestration"
authors = ["iobruno <bruno.ariev@gmail.com>"]
license = "CC-BY-SA 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
omegaconf = "^2.3.0"
pandas = "^2.0.0"
prefect = "^2.10.2"
greenlet = "^2.0.2"
pyarrow = "^11.0.0"
psycopg2 = { version = "2.9.5", markers = "platform_system == 'Linux'" }
psycopg2-binary = { version = "^2.9.5", markers = "platform_system == 'Darwin'" }
sqlalchemy = "1.4.46"

[tool.poetry.group.dev.dependencies]
jupyterlab = "3.5.3"
isort = "^5.12.0"
yapf = "^0.32.0"
toml = "^0.10.2"

[tool.yapf]
based_on_style = "facebook"
indent_width = 4
column_limit = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"