[tool.poetry]
name = "prefect-workflow"
version = "1.0-SNAPSHOT"
description = "Prefect Workflow Orchestration"
authors = ["iobruno <bruno.ariev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
omegaconf = "^2.3.0"
pandas = {extras = ["performance"], version = "^1.5.3"}
prefect = "^2.7.12"
prefect-sqlalchemy = "^0.2.2"
prefect-gcp = {extras = ["cloud-storage"], version = "^0.2.5"}
greenlet = "^2.0.2"
pyarrow = "^11.0.0"
sqlalchemy = "1.4.46"
psycopg2 = { version = "2.9.5", markers = "platform_system == 'Linux'" }
psycopg2-binary = { version = "^2.9.5", markers = "platform_system == 'Darwin'" }
pandas-gbq = "^0.19.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "3.5.3"
isort = "^5.12.0"

[tool.yapf]
based_on_style = "google"
allow_multiline_lambdas = true
blank_line_before_nested_class_or_def = true
coalesce_brackets = true
column_limit = 100
split_before_bitwise_operator = true
split_before_named_assigns = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
