[project]
name = ""
version = "1.0"
description = "Analytics Engineering with dbt and BigQuery"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.10,<3.12"

dependencies = [
    "dbt>=1.0.0.34.14",
    "dbt-bigquery>=1.7.2",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.6",
]

[tool.ruff]
line-length = 100