[tool.poetry]
name = "dbt-analytics"
version = "1.0"
description = "Analytics Engineering with dbt"
authors = ["iobruno <bruno.ariev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "analytics_engineering"}]

[tool.poetry.dependencies]
python = "^3.9"
dbt-duckdb = "^1.4.0"
piperider = {extras = ["duckdb"], version = "^0.20.1"}

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
