[tool.poetry]
name = "pyflink-playground"
version = "0.1.0"
description = "Batch Processing with PySpark - DTC"
authors = ["iobruno <bruno.ariev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9 || ~3.10"


[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
isort = "^5.12.0"
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
