[tool.poetry]
name = "faust-stream-processing"
version = "1.0.0"
description = "Stream Processing with Kafka using Python"
authors = ["iobruno <bruno.ariev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_stream_processing"}]

[tool.poetry.dependencies]
python = "^3.9"
protobuf = "^4.22.0"
avro = "^1.11.1"
faust-streaming = "^0.10.4"
omegaconf = "^2.3.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"
yapf = "^0.32.0"

[tool.yapf]
based_on_style = "google"
allow_multiline_lambdas = true
blank_line_before_nested_class_or_def = true
coalesce_brackets = true
column_limit = 100
split_before_bitwise_operator = true
split_before_named_assigns = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
